# learing_note

./: An_Even_Easier_Introduction_to_CUDA1.ipynb  BloomFilter.cpp  CRTP.md  KV Cache.md  NUMA.md  Partitioned-Elias-Fano.cpp  README.md  Roaring.cpp  Roaring.md  STL-C++20  Untitled0.ipynb  c++20协程学习.md  c++大杂烩.md  c++新特性.md  cuda_learn.md  double  double.cpp  effective_modern_c++.md  gdbt_learing.md  lock_free.md  lsmtree.cpp  pq_test.cpp  regest.cpp  test  test.cpp  举证.md  乘积量化.md  倒排检索引擎优化.md  搜推广-大模型工程.md  理解C++的_Memory_Order.md  矩阵.html  神经网络MLP.md
DAG/: CMakeLists.txt  dag  dag.cpp  element_registry.h  registry_inl.h
DAG/app_interface/: AsyncRpcModule.h  CMakeLists.txt  Component.h  Context.h  DlModuleInterface.h  Module.h  RequestContextData.h  RpcComponent.h  RunStatus.h  RunnableModule.h  SwApp.h  SyncModule.h
DAG/app_sdk/: CMakeLists.txt  ModuleRegistry.cpp  ModuleRegistry.h
DAG/echo_server/: CMakeLists.txt  EchoApp.cpp  EchoApp.h  EchoModule.cpp  EchoModule.h  EchoService.proto
DAG/registry/: CMakeLists.txt  factory_registry.h  learing_searcher_work.cpp  registry.h  test
DAG/sw/common/: ComponentRegistry.cpp
DAG/sw/config/: ServerConfiguration.cpp  ServerConfiguration.h  SwConfig.h
DAG/sw/server/: AppLoader.cpp  AppLoader.h  AppProxy.cpp  AppProxy.h  CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  ComponentRegistry.cpp  ComponentRegistry.h  HealthCheckable.h  Log.h  ModuleScheduler.cpp  ModuleScheduler.h  ModuleTopologyManager.cpp  ModuleTopologyManager.h  RequestContextImpl.cpp  RequestContextImpl.h  RpcComponentImpl.cpp  RpcComponentImpl.h  RpcServer.cpp  RpcServer.h  RpcServiceImpl.cpp  RpcServiceImpl.h  SearchWorker.cpp  SearchWorker.h  ServerConfiguration.cpp  ServerConfiguration.h  ServerMain.cpp  SwConfig.h  main.cpp  topology_config.pb.cc  topology_config.pb.h  topology_config.proto
DAG/sw/server/common/: ComponentRegistry.h
DAG/sw/server/component/: RpcComponentImpl.cpp  RpcComponentImpl.h
DAG/sw/server/tests/: ModuleTopologyManagerTest.cpp
ML_DL/: 梯度下降.md
Tools_learing_note/: git_use_note
c++11中的内存模型/: 1.md
code_debup/: gdb
double_buffer/: brpc_double  brpc_double.cpp  pthread_key  pthread_key.c
find_job/: look_for_job.cpp
miniflow/: iter1  iter2  iter3  iter4  minitf_iter1.cpp  minitf_iter2.cpp  minitf_iter3.cpp  minitf_iter4.cpp
paged_attention_lab/: 00_dense_attention.py  01_block_table.py  02_paged_kv_cache.py  03_paged_decode.py  04_prefix_cow.py  05_prefix_cache.py  LECTURE_CN.md  README.md  paged_kv.py  run_all.sh  utils.py
recipes/: TaskDSL  TaskDSL.cpp  Typelist.hpp  dsl  dsl.cpp
